--- a/style.css
+++ b/style.css
@@ -126,7 +126,6 @@
       padding: 20px;
       }
 
- 
 }
 
  
@@ -277,6 +276,11 @@
     .row {
       display: flex;
       align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .row-reverse {
+      flex-direction: row-reverse;
     }
 
     .row-2 {
@@ -285,15 +289,15 @@
     }
     
     .column {
-      flex: 50%;
+      flex: 1;
     }
     
     .column_2 {
-      flex: 50%;
+      flex: 1;
     }
 
     .column_3 {
-      flex: 50%;
+      flex: 1;
     }
     
   
